2015-09-28  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Etc/zsh-development-guide: Update link to my
	ChangeLog generator script, on account of patching it to handle
	commas properly (thanks Mikael).

2015-09-28  Mikael Magnusson  <mikachu@gmail.com>

	* unposted: Completion/Zsh/Context/_brace_parameter,
	Completion/Zsh/Type/_delimiters, Completion/Zsh/Type/_globquals,
	Functions/Calendar/age: Fix broken case condition and "qualifer"
	typo

2015-09-27  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36651: Doc/Zsh/options.yo, Src/exec.c, Src/math.c,
	Test/E01options.ztst: WARN_CREATE_GLOBAL += math expressions

	* Matthew Martin: 36653: Completion/Unix/Command/_user_admin:
	OpenBSD's usermod has no -a flag

2015-09-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 36663: Src/mkmakemod.sh, Src/zsh.mdd: replace obsolete
	"autobins" commentary with "autofeatures"

	* 36661: Src/Modules/curses.mdd: replace obsolete "autobins"
	setting with "autofeatures"

2015-09-28  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 36631: Completion/Unix/Command/_sh,
	Completion/Unix/Command/_zsh: separate _zsh from _sh	

2015-09-26  Barton E. Schaefer  <schaefer@zsh.org>

	* 36641: Src/Modules/complist.c: fix multibyte handling in
	incremental search during menu selection

2015-09-26  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (see 36633): Completion/Unix/Command/_hg: _hg:
	Enable --option=value syntax and disable '-xy Xarg Yarg' syntax

2015-09-25  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/Zle/zle_tricky.c Src/Zle/zle_utils.c: zle:
	Document the C helper function processcmd().

2015-09-25  Christoph Mathys  <eraserix@gmail.com>

	* 36626: Completion/Unix/Command/_hg: _hg: completion for
	'hg bookmarks'

2015-09-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 36630: Doc/Zsh/contrib.yo, Doc/Zsh/manual.yo,
	Functions/Chpwd/zsh_directory_name_generic: new helper function.

2015-09-24  Barton E. Schaefer  <schaefer@zsh.org>
